# DefHack

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.db  HOW_TO_CHECK_DATA.md  IMPLEMENTATION_COMPLETE.py  INTEGRATION_SUCCESS_SUMMARY.py  MILITARY_LLM_GUIDE.py  OPENAI_CONVERSION_SUCCESS.py  PROMPT_ENGINEERING_GUIDE.py  README.md  README_UNIFIED_SYSTEM.md  SENSOR_DATA_METHODS.py  TELEGRAM_BOT_SETUP_GUIDE.py  TELEGRAM_INTEGRATION_GUIDE.py  __main__.py  add_new_observation.py  add_sensor_data.py  alembic.ini  bag_of_words.txt  bag_of_words2.txt  bulk_sensor_upload.py  check_schema.py  citation_demo.py  complete_merge.bat  complete_system_verification.py  comprehensive_test.py  data_viewer.py  database_inspector.py  debug_leader_notifications.py  debug_openai_client.py  debug_search.py  debug_users.py  defhack_cli.py  defhack_unified_input.py  demo_llm_classification.py  docker-compose.yml  init.sql  init_minio.py  intelligence_summary.py  (+33 more)
.github/: copilot-instructions.md
DefHack/: __init__.py  __main__.py  api.py  config.py  conftest.py  conftests.py  db.py  embeddings.py  ingest_sensor.py  intel_indexer.py  llm.py  retriever.py  schemas.py  sensor_backlog.json  storage.py
DefHack/clarity_opsbot/: MAP_FEATURE.md  VOICE_TRANSCRIPTION.md  __init__.py  app.py  bot.py  config.py  defhack_bridge.py  (+9 more)
alembic/: env.py
database/: docker-compose.yml  sensor_db.py  test_sensor_db.py
documents/: feature_implementation_plan
sensor-dashboard/: package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json
tests/: visualize_propeller_eval.py
(+100 files in other folders)
