[project]
name = "defhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "mgrs>=1.5.0",
    "openai>=2.1.0",
    "packaging>=25.0",
    "python-telegram-bot>=22.5",
    "pillow>=10.4.0",
    "staticmap>=0.5.5",
]
