[project]
name = "defhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.11.9",
    "pillow>=10.0",
    "yolov5>=7.0.14",
    "open-clip-torch>=3.2.0",
    "matplotlib>=3.10.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
